# ChangeLog for net-firewall/shorewall
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-firewall/shorewall/ChangeLog,v 1.274 2015/02/07 18:36:38 zlogene Exp $

  07 Feb 2015; Mikle Kolyada <zlogene@gentoo.org> shorewall-4.6.6.1.ebuild:
  alpha/ppc/ppc64/sparc stable wrt bug #536796

  06 Feb 2015; Mikle Kolyada <zlogene@gentoo.org> shorewall-4.6.6.1.ebuild:
  amd64/x86 stable wrt bug #536796

  05 Feb 2015; Jeroen Roovers <jer@gentoo.org> shorewall-4.6.6.1.ebuild:
  Stable for HPPA (bug #536796).

*shorewall-4.6.6.1 (24 Jan 2015)

  24 Jan 2015; Andreas K. Huettel <dilfridge@gentoo.org>
  +shorewall-4.6.6.1.ebuild:
  Version bump, bug 536662

  13 Jan 2015; Jeroen Roovers <jer@gentoo.org> shorewall-4.5.21.10-r1.ebuild:
  Stable for HPPA (bug #535560).

*shorewall-4.6.5.3 (04 Jan 2015)

  04 Jan 2015; Justin Lecher <jlec@gentoo.org> -shorewall-4.6.5.2.ebuild,
  +shorewall-4.6.5.3.ebuild, files/4.6/shorewall.initd,
  files/4.6/shorewall.systemd, files/4.6/shorewall-init.initd,
  files/4.6/shorewall-init.systemd, files/4.6/shorewall-lite.initd,
  files/4.6/shorewall-lite.systemd, files/4.6/shorewall6-lite.initd,
  files/4.6/shorewall6-lite.systemd, files/4.6/shorewall6.initd,
  files/4.6/shorewall6.systemd, files/4.6/shorewallrc,
  -files/4.6/shorewallrc-r1, metadata.xml:
  Version Bump, #534232, Thanks Thomas D. for the patch; fixes bugs, #530704,
  #534062

  18 Nov 2014; Michael Weber <xmw@gentoo.org>
  -files/4.5.18-r1/shorewall.conf-SUBSYSLOCK.patch,
  -files/4.5.18-r1/shorewall.initd, -files/4.5.18-r1/shorewall.systemd,
  -files/4.5.18-r1/shorewallrc_new, -files/4.5.21.7/10-releasenotes.patch,
  -files/4.5.21.7/shorewall.confd, -files/4.5.21.7/shorewall.initd,
  -files/4.5.21.7/shorewall.systemd, -files/4.5.21.7/shorewallrc,
  -shorewall-4.5.18-r1.ebuild, -shorewall-4.5.21.7.ebuild:
  Drop old.

*shorewall-4.6.5.2 (18 Nov 2014)

  18 Nov 2014; Michael Weber <xmw@gentoo.org>