@@ -1,6 +1,9 @@
 # ChangeLog for net-firewall/shorewall
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-firewall/shorewall/ChangeLog,v 1.274 2015/02/07 18:36:38 zlogene Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-firewall/shorewall/ChangeLog,v 1.275 2015/02/07 22:59:47 floppym Exp $
+
+  07 Feb 2015; Mike Gilbert <floppym@gentoo.org> shorewall-4.6.6.1.ebuild:
+  Adjust KEYWORDS handling, bug 539276 by Thomas D.
 
   07 Feb 2015; Mikle Kolyada <zlogene@gentoo.org> shorewall-4.6.6.1.ebuild:
   alpha/ppc/ppc64/sparc stable wrt bug #536796
